--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
         "hydra-synth": "^1.3.22",
-        "p5js": "^1.2.18"
+        "p5js": "^1.2.18",
+        "socket.io": "^4.4.1"
     }
 }
