--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     },
     "engines": {
         "node": "12.x"
-    }, 
+    },
     "author": "EmilianoBrazzoli",
     "license": "MIT",
+    "type": "module",
     "dependencies": {
+        "bootstrap": "^5.2.2",
+        "codemirror": "^5.65.9",
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
         "hydra-synth": "^1.3.22",
