--- a/package.json
+++ b/package.json
@@ -4,18 +4,29 @@
     "description": "Coding live setup vitreous",
     "main": "./src/app.js",
     "scripts": {
-        "start": "node ./src/app.js"
-    }, 
+        "start": "node ./src/app.js",
+        "build": "rollup --config  ./src/rollup.config.js",
+        "buildAndStart": "rollup --config  ./src/rollup.config.js  && node ./src/app.js"
+    },
     "author": "EmilianoBrazzoli",
     "license": "MIT",
     "type": "module",
     "dependencies": {
+        "@codemirror/autocomplete": "^6.11.1",
+        "@codemirror/lang-javascript": "^6.2.1",
+        "@codemirror/language": "^6.9.3",
+        "@codemirror/lint": "^6.4.2",
+        "@codemirror/state": "^6.3.2",
+        "@codemirror/view": "^6.22.1",
         "bootstrap": "^5.2.2",
-        "codemirror": "^5.65.9",
+        "codemirror": "^6.0.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
         "hydra-synth": "^1.3.22",
         "p5js": "^1.2.18",
-        "socket.io": "^4.4.1"
+        "socket.io": "^4.7.2"
+    },
+    "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.2.3"
     }
 }
